--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@
    min-height: 1px;
    margin:0 2% 20px;
  }
-
 @media (min-width: 768px) {
    .container {
       width: 750px;
@@ -61,6 +60,12 @@
 @media screen and (min-width: 1900px) {
   .container {
     width: 1870px;
+  }
+}
+
+@media (min-width: 2400px) {
+  .container {
+      width: 2364px;
   }
 }
 @media (min-width: 992px) {
@@ -144,6 +149,7 @@ header .hero img {
    border: 2px solid #2ECC71;
    box-shadow: 0px 2px 0px 0px #22894E;
  }
+
 /* BENEFITS */
  .benefits {
    text-align: center;
@@ -293,7 +299,6 @@ header .hero img {
    font-size:13px;
    margin-top: 30px;
  }
- .testimonials .up {
-   position: absolute;
-   top: 20px;
- }
+.testimonials .stagger {
+  padding: 20px 0px 0px 0px;
+}
