--- a/style.css
+++ b/style.css
@@ -103,6 +103,10 @@ header nav ul > li{
    display:inline-block;
    margin:0 15px;
 }
+header .site-logo {
+   padding: 2em 0 2em 1.5em;
+   max-height: 30px;
+}
 header nav ul > li.btn-outline {
    padding:10px 15px;
    border:2px solid #FFFFFF;
@@ -138,6 +142,7 @@ header .hero img {
    display:block;
    margin:3em auto 0;
 }
+
  /* BUTTONS */
  .btn {
    border-radius: 4px;
@@ -301,4 +306,35 @@ header .hero img {
  }
 .testimonials .stagger {
   padding: 20px 0px 0px 0px;
+}
+/* FOOTER */
+footer {
+   background-color: #34495E;
+   background-image: linear-gradient (to top, #3498DB 0%, #3498DB 50%, #34495E 50%, #34495E 100%);
+   color: #FFFFFF;
+   height: 150px;
+   position: relative;
+   overflow: hidden;
+   z-index: 0;
+}
+footer p, footer nav ul {
+   font-size: 14px;
+   font-weight: 100;
+   text-align: center;
+   margin: 10px auto 0;
+}
+footer nav ul li {
+   list-style-type: none;
+   display: inline;
+}
+footer nav ul li a {
+   color: #FFFFFF;
+   text-decoration: none;
+}
+footer .right-footer-block {
+   background-color: #3498DB;
+}
+footer .logo {
+   padding: 2em 0 2em 1.5em;
+   max-height: 50px;
 }
