--- a/style.css
+++ b/style.css
@@ -348,6 +348,7 @@ footer .logo {
    height: 100%;
    width: 280px;
    position: absolute;
+   overflow: hidden;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
