--- a/style.css
+++ b/style.css
@@ -36,52 +36,12 @@
    clear: both;
  }
  .one-half, .one-third, .one-fourth {
-   width:46%;
+   width: 96%;
    float:left;
    position:relative;
    min-height: 1px;
    margin:0 2% 20px;
  }
-@media (min-width: 768px) {
-   .container {
-      width: 750px;
-   }
-}
-@media screen and (min-width: 1400px) {
-  .container {
-    width: 1370px;
-  }
-}
-@media screen and (min-width: 1600px) {
-  .container {
-    width: 1570px;
-  }
-}
-@media screen and (min-width: 1900px) {
-  .container {
-    width: 1870px;
-  }
-}
-
-@media (min-width: 2400px) {
-  .container {
-      width: 2364px;
-  }
-}
-@media (min-width: 992px) {
-   .container {
-      width: 970px;
-      }
-      .one-half {
-         width: 46%;
-      }
-      .one-third {
-         width: 29.33333%;
-      }
-      .one-fourth {
-         width: 21%;
-      }
-   }
 
 /* HEADER */
 header {
@@ -93,15 +53,15 @@ header nav {
    padding:1em 0;
 }
 header nav ul {
-   display:inline;
-   text-align:right;
-   float:right;
-   margin:0;
+   display:block;
+   text-align:center;
+   margin: 0 auto;
+   padding:0;
 }
 header nav ul > li{
    list-style-type:none;
-   display:inline-block;
-   margin:0 15px;
+   display:inline;
+   margin:15px 15px;
 }
 header .site-logo {
    padding: 2em 0 2em 1.5em;
@@ -322,6 +282,7 @@ footer p, footer nav ul {
    font-weight: 100;
    text-align: center;
    margin: 10px auto 0;
+   padding: 0;
 }
 footer nav ul li {
    list-style-type: none;
@@ -335,11 +296,107 @@ footer .right-footer-block {
    background-color: #3498DB;
 }
 footer .logo {
-   padding: 2em 0 2em 1.5em;
+   padding: 2em 0;
    margin: 0 auto;
    display: block;
-   height: 50px;
+   width: 100px;
 }
+footer .one-third {
+  width: 96%;
+  min-height: 1px;
+  margin: 0 2% 0px;
+}
+
+@media (min-width: 768px) {
+  footer .one-third {
+    width: 96%;
+    min-height: 1px;
+    margin: 0 2% 0px;
+  }
+@media (min-width: 992px) {
+  footer {
+    background-color: #3498DB;
+    background-image: linear-gradient (to left, #3498DB 0%, 
+      #3498DB 33.333337%, #34495E 33.33337%, 
+      #34495E 100%);
+    height: 100px;
+  }
+
+footer .one-third {
+  width: 29.33333%;
+  float: left;
+  position: relative;
+  min-height: 1px;
+  margin: 0 2% 20px;
+}
+footer p, footer nav ul{
+  padding: 2em 0;
+  text-align: left;
+}
+footer .right-footer-block {
+  background-color: #3498DB;
+}
+footer .logo{
+  padding: 2em 0 2em 1.5em;
+  width: 60px;
+  height: 50px;
+}
+}
+
+@media (min-width: 768px) {
+  .container {
+      width: 750px;
+   }
+   .one-half {
+      width: 46%;
+   }
+   .one-third {
+      width: 29.33333%;
+   }
+   .one-fourth {
+      width: 21%;
+   }
+   .testimonials .alternate {
+      margin-top: 0px;
+   }
+   header .site-logo {
+      display: inline-block;
+      float: left;
+   }
+   header nav ul {
+      display: inline;
+      text-align: right;
+      float: right;
+      margin: 0;
+   }
+   header nav ul > li {
+      list-style-type: none;
+      display: inline-block;
+      margin: 0 15px;
+   }
+}
+@media (min-width: 992px) {
+   .container {
+      width: 970px;
+      }
+    .testimonials .one-fourth {
+      width: 21%;
+      }
+    .testimonials ul li.alternate {
+      margin-top: 20px;
+      }
+    }
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+@media (min-width: 1920px) {
+  .container {
+    width: 1800px;
+  }
+}
+
 /* DASHBOARD */
  .dashboard {
    background:#F7F7F7;
@@ -597,6 +654,15 @@ footer .logo {
      width:23%;
      margin:0 1% 25px;
    }
+}
+.settings-btn {
+  margin-top:0px!important;
+}
+
+.dropit-inverse .dropit-submenu li a {
+  text-align: left;
+  font-size:12px;
+  float:none;
 }
 
  
