--- a/style.css
+++ b/style.css
@@ -64,9 +64,10 @@ header nav ul > li{
    margin:15px 15px;
 }
 header .site-logo {
-   padding: 2em 0 2em 1.5em;
-   max-height: 30px;
-}
+   text-align: center;
+   margin: 0 auto;
+   display: block;
+ }
 header nav ul > li.btn-outline {
    padding:10px 15px;
    border:2px solid #FFFFFF;
@@ -270,7 +271,6 @@ header .hero img {
 /* FOOTER */
 footer {
    background-color: #34495E;
-   background-image: linear-gradient (to top, #3498DB 0%, #3498DB 50%, #34495E 50%, #34495E 100%);
    color: #FFFFFF;
    height: 150px;
    position: relative;
@@ -292,9 +292,6 @@ footer nav ul li a {
    color: #FFFFFF;
    text-decoration: none;
 }
-footer .right-footer-block {
-   background-color: #3498DB;
-}
 footer .logo {
    padding: 2em 0;
    margin: 0 auto;
@@ -313,15 +310,12 @@ footer .one-third {
     min-height: 1px;
     margin: 0 2% 0px;
   }
+}
 @media (min-width: 992px) {
   footer {
     background-color: #3498DB;
-    background-image: linear-gradient (to left, #3498DB 0%, 
-      #3498DB 33.333337%, #34495E 33.33337%, 
-      #34495E 100%);
     height: 100px;
   }
-
 footer .one-third {
   width: 29.33333%;
   float: left;
@@ -332,9 +326,6 @@ footer .one-third {
 footer p, footer nav ul{
   padding: 2em 0;
   text-align: left;
-}
-footer .right-footer-block {
-  background-color: #3498DB;
 }
 footer .logo{
   padding: 2em 0 2em 1.5em;
@@ -361,7 +352,6 @@ footer .logo{
    }
    header .site-logo {
       display: inline-block;
-      float: left;
    }
    header nav ul {
       display: inline;
